--- a/mendrix-consultancy/templates/front-page.html
+++ b/mendrix-consultancy/templates/front-page.html
@@ -1,3 +1,5 @@
+<!-- wp:template-part {"slug":"skip-link","theme":"mendrix-consultancy"} /-->
+
 <!-- wp:template-part {"slug":"header","area":"header"} /-->
 
 <!-- wp:group {"tagName":"main","layout":{"type":"constrained"},"style":{"spacing":{"padding":{"top":"0","right":"0","bottom":"0","left":"0"}}},"anchor":"primary"} -->
