--- a/mendrix-consultancy/templates/page.html
+++ b/mendrix-consultancy/templates/page.html
@@ -1,3 +1,5 @@
+<!-- wp:template-part {"slug":"skip-link","theme":"mendrix-consultancy"} /-->
+
 <!-- wp:template-part {"slug":"header","area":"header"} /-->
 
 <!-- wp:group {"tagName":"main","style":{"spacing":{"blockGap":"0","padding":{"top":"var(--wp--preset--spacing--50)","bottom":"var(--wp--preset--spacing--50)","left":"var(--wp--preset--spacing--40)","right":"var(--wp--preset--spacing--40)"}}},"layout":{"type":"constrained"},"anchor":"primary"} -->
