--- a/mendrix-consultancy/templates/single.html
+++ b/mendrix-consultancy/templates/single.html
@@ -1,3 +1,5 @@
+<!-- wp:template-part {"slug":"skip-link","theme":"mendrix-consultancy"} /-->
+
 <!-- wp:template-part {"slug":"header","area":"header"} /-->
 
 <!-- wp:group {"tagName":"main","layout":{"type":"constrained"},"style":{"spacing":{"padding":{"top":"var(--wp--preset--spacing--50)","bottom":"var(--wp--preset--spacing--50)","left":"var(--wp--preset--spacing--40)","right":"var(--wp--preset--spacing--40)"}}},"anchor":"primary"} -->
